# vulkan-handbook

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md
.github/prompts/: copyright.prompt.md
cmake/: AddSpirvModules.cmake  ShaderCompilation.cmake  StaticAnalysers.cmake  Vulkan.cmake  project_settings.cmake
configs/: .vsconfig
docs/: index.md  ms-build-tools.md
scripts/: install.ps1
src/: CMakeLists.txt
src/HelloTriangle/: CMakeLists.txt  hellotriangle.cpp
src/HelloWorld/: CMakeLists.txt
